$Id$

****************************** DRUPAL 6 - 2.x BRANCH ********************************

June 20, 2009
-------------
#303544 by Michelle: Added popup preview of post in topic list.

June 18, 2009
-------------
#484052 by merlinofchaos: Made forum topic list view work with new forum topic list style and also added sticky and shadow post changes.
#484052 by Michelle: Fixed up the topic list pager & the #new.
#484052 by Michelle: Moved topic list view preprocess to its own .inc
#484052 by Michelle: Improved shadow topics including adding a new theme function for them.
#484052 by Michelle: Added "Sticky:" label and changed background color.

June 17, 2009
-------------
#494642 by merlinofchaos: Integrate better with new Views post rendering
NOISSUE by merlinofchaos, Michelle: Fixed two typos with _advanced_forum_preprocess_forum_topic_list.
#474552 by webchick: Default forum menu link to enabled.

June 16, 2009
-------------
#492922 by conchur: Fixed typo in comment preprocess.

June 15, 2009
-------------
#489044 by Michelle: Split code up into smaller files both to reduce memory requirements and to make it easier to navigate the code.
#491692 by neclimdul: Removed typo'd backslash.
#472736 by Michelle, merlinofchaos: Made jump to last post work with nodecomment.
NOISSUE by Michelle: Code clean up, more comments added.
#472736 by Michelle: Made topic icon recognize new posts in nodecomment.
NOISSUE by Michelle: Added update to set AF's weight to 15. This is needed for the views to work and was missed on earlier commits.
#492590 by merlinofchaos: Wrench comment wrapper back from the clutches of the evil Garland.
#483408 by neclimdul: Notices cleanup.

June 14, 2009
-------------
#484052 by Michelle: Prevent original topic list page from being created when views is enabled.

June 9, 2009
------------
#484052 by Michelle, merlinofchaos: Created view for topic lists.
#484052 by Michelle: Added topic pager.

June 8, 2009
------------